# ESP-IDF-InkPlate

./: CMakeLists.txt
src/drivers/: battery.cpp  battery.hpp  eink.cpp  eink.hpp  eink_6.cpp  eink_6.hpp  frame_buffer.hpp  inkplate_platform.cpp  inkplate_platform.hpp  it8951_controller.cpp  it8951_controller.hpp  m5_paper_s3.cpp  m5_paper_s3.hpp  m5_paper_s3_imu.cpp  m5_paper_s3_imu.hpp  m5_paper_s3_pins.hpp  m5_paper_s3_power.cpp  m5_paper_s3_power.hpp  m5_paper_s3_rtc.cpp  m5_paper_s3_rtc.hpp  press_keys.cpp  press_keys.hpp  sd_card.cpp  sd_card.hpp  spi_bus_manager.cpp  spi_bus_manager.hpp  touch_keys.cpp  touch_keys.hpp  touch_screen_gt911.cpp  touch_screen_gt911.hpp
src/graphical/: inkplate.hpp
src/services/: download_manager.cpp  download_manager.hpp  http_client.cpp  http_client.hpp  i2s_comms.cpp  i2s_comms.hpp  network_client.cpp  opds_client.cpp  opds_client.hpp  opds_config.cpp  opds_config.hpp  opds_feed_parser.cpp  opds_feed_parser.hpp  opds_ui_helpers.cpp  opds_ui_helpers.hpp  opds_ui_manager.cpp  opds_ui_manager.hpp  timegm.cpp  timegm.hpp  wire.cpp
src/tools/: logging.hpp
